--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
-    <style type="text/css">
-        html, body {
-            margin: 0;
-            padding: 0;
-        }
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title></title>
+        <style type="text/css">
+html, body {
+    margin: 0;
+    padding: 0;
+}
         img {width: 100%}
-        ul { list-style: none }
-        li { margin: 0}
-    </style>
-  </head>
+        ul { list-style: none; margin: 0; padding: 0; }
+        li { margin-bottom: -1em }
+        p { text-align: center; }
+        @media screen and (min-width: 900px) {
+            img {
+                width: 500px;
+            }
+        }
+        </style>
+    </head>
 
-  <body>
-      <ul>
-          <li><img src="dm00.png" /></li>
-          <li><img src="dm01.png" /></li>
-          <li><img src="dm02.png" /></li>
-          <li><img src="dm03.png" /></li>
-          <li><img src="dm04.png" /></li>
-          <li><img src="dm05.PNG" /></li>
-          <li><img src="dm06.png" /></li>
-          <li><img src="dm07.png" /></li>
-          <li><img src="dm08.png" /></li>
-          <li><img src="dm09.png" /></li>
-          <li><img src="dm10.png" /></li>
-      </ul>
-  </body>
+    <body>
+        <p>こちらのコンテンツは、悪口に対する自己防衛です。また、個人情報にはマスキングを施しております。ご了承ください。
+        </p>
+        <ul>
+            <li><img src="dm00.png" /></li>
+            <li><img src="dm01.png" /></li>
+            <li><img src="dm02.png" /></li>
+            <li><img src="dm03.png" /></li>
+            <li><img src="dm04.png" /></li>
+            <li><img src="dm05.PNG" /></li>
+            <li><img src="dm06.png" /></li>
+            <li><img src="dm07.png" /></li>
+            <li><img src="dm08.png" /></li>
+            <li><img src="dm09.png" /></li>
+            <li><img src="dm10.png" /></li>
+        </ul>
+    </body>
 </html>
