css minor tweak

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 html, body {
     margin: 0;
     padding: 0;
+    background: #000;
 }
         img {width: 100%}
         ul { list-style: none; margin: 0; padding: 0; }
         li { margin-bottom: -1em }
-        p { text-align: center; }
+        p { text-align: center; font-family: san-serif; font-size: 1.2em; color: #888; line-height: 1.8em; }
+        a:link, a:visited { color: #ffff; }
         @media screen and (min-width: 900px) {
             img {
                 width: 500px;
@@ -23,7 +25,7 @@ html, body {
     </head>
 
     <body>
-        <p>こちらのコンテンツは、悪口に対する自己防衛です。また、個人情報にはマスキングを施しております。ご了承ください。
+        <p>お疲れ様です。こちらのコンテンツは、<a href="https://twitter.com/shiipompom" target="_blank">しーぽん</a>さんとの全やり取りです。裏口に対する自己防衛です。また、個人情報にはマスキングを施しております。ご了承ください。
         </p>
         <ul>
             <li><img src="dm00.png" /></li>
