--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@ html, body {
     </head>
 
     <body>
-        <p>お疲れ様です。こちらのコンテンツは、<a href="https://twitter.com/shiipompom" target="_blank">しーぽん</a>さんとの全やり取りです。裏口に対する自己防衛です。また、個人情報にはマスキングを施しております。ご了承ください。
-        </p>
+        <p>お疲れ様です。こちらのコンテンツは、<a href="https://twitter.com/shiipompom" target="_blank">しーぽん</a>さんとの全やり取りです</p>
         <ul>
             <li><img src="dm00.png" /></li>
             <li><img src="dm01.png" /></li>
