--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html, body {
         img {width: 100%}
         ul { list-style: none; margin: 0; padding: 0; }
         li { margin-bottom: -1em }
-        p { text-align: center; font-family: san-serif; font-size: 1.2em; color: #888; line-height: 1.8em; }
+        p { text-align: center; font-family: "Helvetica", "Arial", san-serif; font-size: 2em; color: #888; line-height: 1.8em; }
         a:link, a:visited { color: #ffff; }
         @media screen and (min-width: 900px) {
             img {
@@ -25,7 +25,7 @@ html, body {
     </head>
 
     <body>
-        <p>お疲れ様です。こちらのコンテンツは、<a href="https://twitter.com/shiipompom" target="_blank">しーぽん</a>さんとの全やり取りです</p>
+        <p>撮影会降板の件について、いろいろ言われそうなので、やり取り履歴を公開します。</p>
         <ul>
             <li><img src="dm00.png" /></li>
             <li><img src="dm01.png" /></li>
