--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ html, body {
 }
         img {width: 100%}
         ul { list-style: none; margin: 0; padding: 0; }
-        li { margin-bottom: -1em }
-        p { text-align: center; font-family: "Helvetica", "Arial", san-serif; font-size: 2em; color: #888; line-height: 1.8em; }
+        li { margin-bottom: -1em; text-align: center; }
+        p { text-align: center; font-family: "Helvetica", "Arial", san-serif; font-size: 1em; color: #888; line-height: 1.8em; }
         a:link, a:visited { color: #ffff; }
         @media screen and (min-width: 900px) {
             img {
