added dmca takedown notice

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ html, body {
             <li><img src="dm08.png" /></li>
             <li><img src="dm09.png" /></li>
             <li><img src="dm10.png" /></li>
+            <li><img src="dmca-takedown.png" /></li>
         </ul>
     </body>
 </html>
